Fix .accessible-not-visible for some screenreaders

--- a/assets/_sass/_custom.scss
+++ b/assets/_sass/_custom.scss
@@ -1131,6 +1131,9 @@
 
 // Accessibility Helpers
 //********************************************************
+
+// Visually hides element while allowing access by screen readers
 .accessible-not-visible {
-	display: none;
+	position: absolute;
+	left: -999999px;
 }
